// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the empty operator. 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must": Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": "",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the exactMatch operator. 1`] = `
Object {
  "term": Object {
    "data.attributes.extensionValues.extension.field.keyword": "test123",
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the in operator. 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the notEmpty operator. 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "exists": Object {
        "field": "data.attributes.extensionValues.extension.field",
      },
    },
    "must_not": Object {
      "term": Object {
        "data.attributes.extensionValues.extension.field.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the notEquals operator. 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": "test123",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.extensionValues.extension.field",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the notIn operator. 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the startsWith operator. 1`] = `
Object {
  "prefix": Object {
    "data.attributes.extensionValues.extension.field.keyword": Object {
      "case_insensitive": true,
      "value": "test123",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Attribute level tests Using the wildcard operator. 1`] = `
Object {
  "wildcard": Object {
    "data.attributes.extensionValues.extension.field.keyword": Object {
      "case_insensitive": true,
      "value": "*test123*",
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the empty operator. 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "should": Array [
            Object {
              "bool": Object {
                "must_not": Object {
                  "nested": Object {
                    "path": "included",
                    "query": Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "exists": Object {
                              "field": "included.attributes.extensionValues.extension.field",
                            },
                          },
                          Object {
                            "term": Object {
                              "included.type": "collecting-event",
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              },
            },
            Object {
              "nested": Object {
                "path": "included",
                "query": Object {
                  "bool": Object {
                    "must": Array [
                      Object {
                        "term": Object {
                          "included.attributes.extensionValues.extension.field.keyword": "",
                        },
                      },
                      Object {
                        "term": Object {
                          "included.type": "collecting-event",
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the exactMatch operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.attributes.extensionValues.extension.field.keyword": "test123",
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the in operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "bool": Object {
              "must": Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test1",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test2",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the notEmpty operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
          Object {
            "exists": Object {
              "field": "included.attributes.extensionValues.extension.field",
            },
          },
        ],
        "must_not": Object {
          "term": Object {
            "included.attributes.extensionValues.extension.field.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the notEquals operator. 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collecting-event",
                },
              },
              "must_not": Object {
                "term": Object {
                  "included.attributes.extensionValues.extension.field.keyword": "test123",
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collecting-event",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "included.attributes.extensionValues.extension.field",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the notIn operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "bool": Object {
              "must_not": Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test1",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test2",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.extensionValues.extension.field.keyword": Object {
                          "case_insensitive": true,
                          "value": "test3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the startsWith operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "test123",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderFieldExtensionSearch transformFieldExtensionToDSL function Relationship level tests Using the wildcard operator. 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "wildcard": Object {
              "included.attributes.extensionValues.extension.field.keyword": Object {
                "case_insensitive": true,
                "value": "*test123*",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;
